mini done  line 74 error

--- a/example/index.html
+++ b/example/index.html
@@ -9,8 +9,33 @@
     <link rel="stylesheet" type="text/css" media="screen" href="./main.css" />
 </head>
 <body>
-    
-    
+    <header>
+        <div>
+            <img src="./media/logo.svg"/>
+            <nav>
+                <a href="#">Home</a>
+                <a href="#">Services</a>
+                <a href="#">About</a>
+                <a href="#">Contact</a>
+            </nav>
+        </div>
+    </header>
+    <div class="content bg-shared bg-1 ">
+        <div>
+            <h1>My Website</h1>
+            <h2>Really this is my Website</h2>
+        </div>
+    </div>
+    <div class="content row">
+        <div>
+            <img src="./media/logo1.svg"/>
+            <img src="./media/logo2.svg"/>
+            <img src="./media/logo3.svg"/>
+        </div>
+    </div>
+    <div class="content bg-shared bg-2">
+
+    </div>
 
 </body>
 </html>
